<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DriveActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/starting_range"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_starting_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_double_vertical_margin"
        android:text="@string/nullnull"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drive_distance" />
    <EditText
        android:id="@+id/et_acc_mistakes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acc_mistakes" />
    
    <EditText
        android:id="@+id/et_speed_mistakes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speed_mistakes" />
    
    <Button 
        android:id="@+id/b_drive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/drive_button" />
    
    <TextView
        android:id="@+id/tv_date1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="date1" />
    
    <TextView
        android:id="@+id/tv_date2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="date2" />

</LinearLayout>